# agno-apollos

./: .dockerignore  .gitignore  .mcp.json.example  CLAUDE.md  PROJECT_INDEX.md  README.md  compose.yaml  docker-compose.prod.yaml  docker-compose.yaml  example.env  mise.toml  pyproject.toml
.claude/: settings.json
.claude/agents/: agno-api-verifier.md  doc-sync-reviewer.md  security-reviewer.md  workflow-validator.md
.claude/commands/: prime.md
.github/codeql/: codeql-config.yml
.github/workflows/: claude-code-review.yml  claude.yml.disabled  codeql.yml  docker-images.yml  docs-image.yml  validate.yml
.serena/: project.yml
.serena/memories/: project-overview.md
agents/: knowledge_agent.py  mcp_agent.py
app/: config.yaml  main.py
backend/: CLAUDE.md  Dockerfile  Dockerfile.dockerignore  cli.py  config.yaml  main.py  maintenance.py  models.py  registry.py  telemetry.py
backend/a2a/: __init__.py  executor.py  server.py
backend/agents/: data_agent.py  knowledge_agent.py  m365_agent.py  mcp_agent.py  reasoning_agent.py  web_search_agent.py
backend/auth/: __init__.py  config.py  database.py  dependencies.py  graph.py  jwks_cache.py  m365_middleware.py  m365_routes.py  m365_token_service.py  middleware.py  models.py  routes.py  scope_mapper.py  security_headers.py  sync_service.py
backend/context/: __init__.py  business_rules.py  intent_routing.py  semantic_model.py  source_registry.py
backend/db/: __init__.py  session.py  url.py
backend/evals/: __init__.py  grader.py  judge.py  reliability_evals.py  run_evals.py  test_cases.py
backend/knowledge/: __init__.py  loaders.py
backend/mcp/: __init__.py  config.py  gateway_client.py  preferences.py  routes.py  schemas.py  tools_factory.py  validation.py
backend/scripts/: __init__.py  load_knowledge.py  load_sample_data.py
backend/teams/: coordinator_team.py  research_team.py
backend/tools/: __init__.py  approved_ops.py  awareness.py  hooks.py  introspect.py  m365.py  save_discovery.py  save_query.py  search.py
backend/workflows/: __init__.py  research_workflow.py
data/business/: agno_tables.json
data/queries/: common_queries.sql
data/tables/: constructors_championship.json
db/: session.py
docs/: .dockerignore  .mintignore  CLAUDE.md  Dockerfile  contributing.mdx  development.mdx  docs.json  index.mdx  quickstart.mdx
docs/agents/: creating-agents.mdx  data-agent.mdx  knowledge-agent.mdx  mcp-agent.mdx  overview.mdx  reasoning-agent.mdx  web-search-agent.mdx
docs/configuration/: a2a.mdx  docker.mdx  environment.mdx  m365.mdx  mcp-gateway.mdx  security.mdx  telemetry.mdx
docs/reference/: architecture.mdx  code-map.mdx  mise-tasks.mdx
docs/teams/: overview.mdx
docs/workflows/: overview.mdx
frontend/: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: store.ts
hooks/: pre-commit
mise-tasks/: ci  clean  db  dev  format  lint  load-docs  load-knowledge  load-sample-data  release  setup  test  typecheck  validate
mise-tasks/agent/: cli
mise-tasks/auth/: generate-token
mise-tasks/docker/: build  down  logs  up
mise-tasks/docs/: dev  docker  validate
mise-tasks/evals/: reliability  run
mise-tasks/frontend/: build  dev  format  lint  (+3 more)
scripts/: build_image.sh  entrypoint.sh  format.sh  init-contextforge-db.sh  validate.sh  venv_setup.sh
tests/: conftest.py  test_agents.py  test_db_session.py  test_gateway_client.py  test_health.py  test_judge.py  test_m365_hooks.py  test_m365_integration.py  test_m365_middleware.py  test_m365_model.py  test_m365_token_service.py  test_m365_tools.py  test_mcp_routes.py  test_schedules.py  test_teams.py
(+71 files in other folders)
