[project]
name = "ApollosAI"
version = "1.0.0"
requires-python = ">=3.12,<4"
readme = "README.md"
license-files = ["LICENSE"]
authors = [{ name = "Jason Matherly", email = "jason@mathrly.net" }]

dependencies = [
  "agno",
  "fastapi[standard]",
  "openai",
  "pgvector",
  "psycopg[binary]",
  "sqlalchemy",
  "mcp",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "openinference-instrumentation-agno",
  "litellm[proxy]>=1.81.13",
]

[dependency-groups]
dev = ["mypy", "ruff"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 120
exclude = [".venv*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [".venv*"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "setuptools.*", "agno.*", "httpx.*", "mcp.*"]
ignore_missing_imports = true
