[project]
name = "ApollosAI"
version = "1.0.3"
requires-python = ">=3.12,<4"
readme = "README.md"
license-files = ["LICENSE"]
authors = [{ name = "Jason Matherly", email = "jason@mathrly.net" }]

dependencies = [
  "agno",
  "fastapi[standard]",
  "openai",
  "pgvector",
  "psycopg[binary]",
  "sqlalchemy",
  "mcp",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "openinference-instrumentation-agno",
  "litellm[proxy]>=1.81.13",
  "duckduckgo-search>=8.1.1",
  "pypdf>=6.7.1",
  "aiofiles>=25.1.0",
  "opentelemetry-exporter-otlp-proto-http>=1.39.1",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "ruff",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 120
exclude = [".venv*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [".venv*", "tests/"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "setuptools.*", "agno.*", "httpx.*", "mcp.*", "requests.*"]
ignore_missing_imports = true
