[project]
name = "ApollosAI"
version = "1.0.8"
requires-python = ">=3.12,<4"
readme = "README.md"
license-files = ["LICENSE"]
authors = [{ name = "Jason Matherly", email = "jason@mathrly.net" }]

dependencies = [
  "agno",
  "fastapi[standard]",
  "openai",
  "pgvector",
  "psycopg[binary]",
  "sqlalchemy",
  "mcp",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "openinference-instrumentation-agno",
  "litellm>=1.81.13",
  "ddgs>=9.0.0",
  "pypdf>=6.7.1",
  "aiofiles>=25.1.0",
  "opentelemetry-exporter-otlp-proto-http>=1.39.1",
  "fastmcp>=2.14,<3",
  "pandas>=3.0.1",
  "httpx>=0.28.1",
  "rich>=14.3.2",
]

[dependency-groups]
dev = [
    "mypy",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "ruff",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 120
exclude = [".venv*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [".venv*", "tests/"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "setuptools.*", "agno.*", "httpx.*", "mcp.*", "requests.*", "ddgs.*", "fastmcp.*"]
ignore_missing_imports = true
